--- a/SampleMVP/MVP/VC/Base.lproj/Main.storyboard
+++ b/SampleMVP/MVP/VC/Base.lproj/Main.storyboard
@@ -28,35 +28,40 @@
                                     <constraint firstAttribute="height" constant="50" id="mAt-dL-4Oi"/>
                                 </constraints>
                             </activityIndicatorView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="guf-Ks-xnr">
-                                <rect key="frame" x="40" y="54" width="250" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="VFO-IR-g3Q"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NI6-4J-ovI">
-                                <rect key="frame" x="328" y="54" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="search:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Efn-N6-Ndk"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="38" translatesAutoresizingMaskIntoConstraints="NO" id="flm-f0-V8N">
+                                <rect key="frame" x="40" y="54" width="334" height="34"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="検索する文字を入力" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="guf-Ks-xnr">
+                                        <rect key="frame" x="0.0" y="0.0" width="265" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NI6-4J-ovI">
+                                        <rect key="frame" x="303" y="0.0" width="31" height="34"/>
+                                        <color key="backgroundColor" systemColor="systemGray2Color"/>
+                                        <state key="normal" title="検索">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="titleShadowColor" systemColor="labelColor"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="search:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Efn-N6-Ndk"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="NI6-4J-ovI" secondAttribute="trailing" constant="40" id="1e0-5s-NTR"/>
-                            <constraint firstItem="guf-Ks-xnr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="J0e-41-1Mo"/>
-                            <constraint firstItem="guf-Ks-xnr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="KDM-db-fB4"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ZHe-Ha-ClT" secondAttribute="bottom" id="Mva-Dl-SDH"/>
                             <constraint firstItem="ePN-1m-742" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="NIz-My-BG9"/>
-                            <constraint firstItem="NI6-4J-ovI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="X13-VG-kDp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="flm-f0-V8N" secondAttribute="trailing" constant="40" id="Og9-pp-jNp"/>
                             <constraint firstItem="ePN-1m-742" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ZUc-jW-R44"/>
+                            <constraint firstItem="flm-f0-V8N" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="bcV-e5-F0I"/>
+                            <constraint firstItem="ZHe-Ha-ClT" firstAttribute="top" secondItem="flm-f0-V8N" secondAttribute="bottom" constant="15" id="h8i-dA-zME"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZHe-Ha-ClT" secondAttribute="trailing" id="heH-io-hob"/>
                             <constraint firstItem="ZHe-Ha-ClT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mTb-k0-8G0"/>
-                            <constraint firstItem="ZHe-Ha-ClT" firstAttribute="top" secondItem="guf-Ks-xnr" secondAttribute="bottom" constant="15" id="oeC-pZ-f67"/>
+                            <constraint firstItem="flm-f0-V8N" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="pju-s3-xP2"/>
                         </constraints>
                     </view>
                     <connections>
@@ -71,8 +76,14 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
